fixed overflow issues

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ a {
     justify-content: center;
     align-items: center;
     width: 300px;
-    height: 102px;
+    height: auto;
     margin-top: 10px;
     background-color: white;
     margin-bottom: 10px;
@@ -77,18 +77,20 @@ a {
 
 #previousResult {
     width: 300px;
-    height: 34px;
+    height: auto;
     font-size: 34px;
     font-weight: lighter;
-    overflow:hidden
+    overflow: auto;
+    word-wrap: break-word;
 }
 
 #currentInput {
     width: 300px;
-    height: 67.5px;
-    font-size: 67.5px;
+    height: auto;
+    font-size: 50px;
     font-weight: lighter;
-    overflow: scroll;
+    overflow: auto;
+    word-wrap: break-word;
     
 }
 
